# test-environment

./: .editorconfig  .gitignore  .hgignore  AUTHORS  CONTRIBUTING.md  COPYRIGHT  Doxyfile  LICENSE  LICENSE-LGPL  Makefile.am  README  README-Devel.md  README.md  bootstrap.sh  common_vars.sh  configure.ac  dispatcher.sh  gen_docs  gen_doxygen  get_ta_signature  mainpage.dox  meson.build  meson_options.txt  package.dox  refman.tex  requests  te.dox  te_docgen.sh  te_sniffer  te_terminology.dox  te_ts.dox  te_user_guide.dox
agents/: Makefile.am  meson.build  package.dox  page.dox
agents/isosctl/: Makefile.am  config.h.in  configure.ac  isosctl.c
agents/linux/: Makefile.am  config.h.in  configure.ac  dhcp_server.c  dhcp_server.h  dns_server.c  ftp_routines.c  isc-dhcp-server.conf.y  isc-dhcp-server.lex.l  linux.c  linux_internal.h  linux_rpc.c  linux_rpc.h  linux_rpc_log.h  linuxconf.c  linuxconf_daemons.c  linuxconf_daemons.h  linuxconf_wifi.c  log_serial.c  named.conf.l  named.conf.y  named.lex.l  radius.c  tarpc.x.m4  tarpc_server.c
agents/power-ctl/: Makefile.am  configure.ac  main.c  meson.build  power_ctl_internal.h  ta_shell_cold_reboot.c  ta_snmp.c  ta_snmp.h  ta_snmp_cold_reboot.c
agents/proxy/: conf.c  main.c  meson.build  proxy_internal.h
agents/switch-ctl/: Makefile.am  conf.c  config.h.in  configure.ac  main.c
agents/unix/: Makefile.am  aux_threads.c  conf.c  conf_8021x.c  conf_daemons.c  conf_daemons.h  conf_dlpi.c  conf_dlpi.h  conf_getmsg.c  conf_iscsi_initiator.c  conf_iscsi_target.c  conf_route.c  conf_route.h  conf_route_list_getmsg.c  conf_route_netlink.c  conf_route_socket.c  conf_stats.c  conf_vtund.c  conf_wifi.c  configure.ac  dhcp_server.c  dhcp_server.h  dns_server.c  ftp_routines.c  linux.c  linuxconf.c  linuxconf_daemons.h  linuxconf_wifi.c  log_netconsole.c  log_remote.c  log_serial.c  main.c  meson.build  named.conf.y  named.lex.l  package.dox  power_sw.c  radius.c  sample.ldif  slapd.conf  (+9 more)
agents/vxworks/: Makefile.am  config.h.in  configure.ac  vxworks.c
agents/win32/: Makefile.am  build_native.sh  cl.m4  common.c  config.h.in  configure.ac  ftp_routines.c  inet_ntop.c  inet_pton.c  package.dox  rpcserver.c  rpcserver.h  tarpc.x.m4  tarpc_server.c  tarpc_server.h  win32.c  win32_dummy.h  win32_rpc.c  win32_rpc.h  win32_rpc_log.h  win32conf.c
doc/: Makefile.am  OKT-WBS-0000029-TE.sxw  OKTL-REQ-0000043-TE.doc  OKTL-SRS-0000239-TE_TRC.sxw  OKTL-WBS-0000239-TE_TRC.sxw  bash_completion  configure.ac  doxyrest-config.lua  meson.build  people
doc/archive/: OKT-HLD-0000027-TE_RCF.sxw  OKTL-0000593.sxw
doc/cm/: Makefile.am  cm_8021x.xml  cm_8021x.yml  cm_acse.xml  cm_acse.yml  cm_aggregation.yml  cm_base.xml  cm_base.yml  cm_block.yml  cm_bpf.xml  cm_bpf.yml  cm_bridge.xml  cm_bridge.yml  cm_ch.xml  cm_ch.yml  cm_cmd_monitor.xml  cm_cmd_monitor.yml  cm_conf_delay.yml  cm_configfs.yml  cm_crypt.xml  cm_crypt.yml  cm_dhcpserver.yml  cm_dnsserver.yml  cm_echoserver.yml  cm_ftpserver.yml  cm_internal.yml  cm_iptables.xml  cm_iptables.yml  cm_iptables_global.yml  cm_iscsi.xml  cm_iscsi.yml  cm_keys.yml  cm_l2tp_server.xml  cm_l2tp_server.yml  cm_l4_port.yml  cm_local.xml  cm_local.yml  cm_local_changed.yml  cm_local_dpdk.yml  cm_local_host.yml  (+70 more)
doc/crr/: OKT-QMSCRR-0000185.txt  OKTL-0000036.txt  mkcrr.sh
doc/dd/: OKT-DD-0000039-TE_BS_CONF.m4  OKT-DD-0000061-TE_RCF_CONF.xsd  OKT-DD-0000079-TE_CS_CONF.xsd  OKT-DD-0000081-TE_TS_DATA.xsd  OKT-DD-0000087-TE_TS_CONF.xsd  OKT-DD-0000089-TE_TS_IF.h  OKT-DD-0000091-TE_TSC_DATA.sxw  OKT-DD-0000091-TE_TSC_DATA.txt  OKT-DD-0000105-TE_LIB_ST.h
doc/ddr/: OKT-QMSDDR-0000012-TE.txt  OKT-QMSDDR-0000014-TE.txt  OKT-QMSDDR-0000016-TE.txt  OKT-QMSDDR-0000018-TE.txt  OKT-QMSDDR-0000020-TE.txt  OKT-QMSDDR-0000022-TE.txt  OKT-QMSDDR-0000024-TE.txt  OKT-QMSDDR-0000026-TE.txt  OKT-QMSDDR-0000028-TE.txt  OKT-QMSDDR-0000030-TE.txt  OKT-QMSDDR-0000032-TE.txt  OKT-QMSDDR-0000034-TE.txt  OKT-QMSDDR-0000036-TE.txt  OKT-QMSDDR-0000038-TE.txt  OKT-QMSDDR-0000042-TE.txt  OKT-QMSDDR-0000044-TE.txt  OKT-QMSDDR-0000046-TE.txt  OKT-QMSDDR-0000048-TE.txt  OKT-QMSDDR-0000050-TE.txt  OKT-QMSDDR-0000052-TE.txt  OKT-QMSDDR-0000054-TE.txt  OKT-QMSDDR-0000056-TE.txt  OKT-QMSDDR-0000058-TE.txt  OKT-QMSDDR-0000060-TE.txt  OKT-QMSDDR-0000062-TE.txt  OKT-QMSDDR-0000064-TE.txt  OKT-QMSDDR-0000066-TE.txt  OKT-QMSDDR-0000068-TE.txt  OKT-QMSDDR-0000070-TE.txt  OKT-QMSDDR-0000072-TE.txt  OKT-QMSDDR-0000074-TE.txt  OKT-QMSDDR-0000076-TE.txt  OKT-QMSDDR-0000078-TE.txt  OKT-QMSDDR-0000080-TE.txt  OKT-QMSDDR-0000082-TE.txt  OKT-QMSDDR-0000084-TE.txt  OKT-QMSDDR-0000086-TE.txt  OKT-QMSDDR-0000088-TE.txt  OKT-QMSDDR-0000090-TE.txt  OKT-QMSDDR-0000094-TE.txt  (+11 more)
doc/dox_resources/: DoxygenLayout.xml  doxygen.css  doxygenfilter  tableofcontents
doc/drafts/: bublik-log-schema.json  conf_iptables.txt  conf_pppoeserver.txt  dnr.asn  ds-example.asn  hl2-csap-dd  mi-schema.json  ndn-atm.asn  ndn-eth.asn  ndn-gen.asn  ndn-snmp.asn  ndn-tcp-ip.asn  packets-asn1.txt  packets.asn  trcdb-scheme.txt
doc/drr/: OKT-QMSDRR-0000130.txt  OKT-QMSDRR-0000131.txt  OKT-QMSDRR-0000132.txt  OKT-QMSDRR-0000133.txt  OKT-QMSDRR-0000134.txt  OKT-QMSDRR-0000135.txt  OKT-QMSDRR-0000140.txt  OKT-QMSDRR-0000141.txt  OKT-QMSDRR-0000142.txt  OKT-QMSDRR-0000143.txt  OKT-QMSDRR-0000144.txt  OKT-QMSDRR-0000145.txt  (+27 more)
engine/: Makefile.am  meson.build  package.dox  page.dox
include/: Makefile.am  comm_agent.h  configure.ac  cs_common.h  cwmp_soapStub.h  dpdk.x.m4  logger_api.h  logger_defs.h  logger_int.h  meson.build  ranlib_noargs_bypass.in  rcf_common.h  rcf_internal.h  rcf_methods.h  rcf_rpc_defs.h  rcf_tce_conf.h  rpc_unsupported.m4  rpcconv.m4  rpcgen.m4  ta_common.h  ta_rpc_log.h  tad_common.h  tapi_rpcsock_defs.h  tarpc.x.m4  te_bpf_common.h  te_compiler.h  te_config.h  te_config.h.in  te_config_internal.h.meson  te_cwmp.h  te_defs.h  te_errno.h  te_ethernet.h  te_ethernet_phy.h  te_ethtool.h  te_expand.h  te_param.h  te_power_sw.h  te_printf.h  te_proto.h  (+13 more)
lib/: Doxyfile  Makefile.am  mainpage.dox  meson.build  package.dox
nutlib/: Makefile.am
suites/: Makefile.am
(+3950 files in other folders)
